--- a/app/src/main/res/layout/fragment_add_travel_video.xml
+++ b/app/src/main/res/layout/fragment_add_travel_video.xml
@@ -27,14 +27,14 @@
             android:id="@+id/f_add_travel_video_b_select_video"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Select Video"
+            android:text="@string/select_video"
             android:backgroundTint="@color/commonButtonColor"/>
 
         <EditText
             android:id="@+id/f_add_travel_video_et_latitude"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Latitude"
+            android:hint="@string/latitude"
             android:inputType="numberDecimal"
             android:maxLines="1"
             android:textColor="@color/commonTextColor"/>
@@ -43,7 +43,7 @@
             android:id="@+id/f_add_travel_video_et_longitude"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Longitude"
+            android:hint="@string/longitude"
             android:inputType="numberDecimal"
             android:maxLines="1"
             android:textColor="@color/commonTextColor"/>
@@ -52,7 +52,7 @@
             android:id="@+id/f_add_travel_video_et_description"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:hint="Description"
+            android:hint="@string/description"
             android:textColor="@color/commonTextColor"
             android:gravity="start"/>
 
@@ -68,7 +68,7 @@
             android:id="@+id/f_add_travel_video_b_accept"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Accept"
+            android:text="@string/accept"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             android:backgroundTint="@color/commonButtonColor"/>
@@ -77,7 +77,7 @@
             android:id="@+id/f_add_travel_video_b_cancel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Cancel"
+            android:text="@string/cancel"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:backgroundTint="@color/commonButtonColor" />
