--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -5,7 +5,8 @@
     android:layout_height="match_parent"
     tools:context=".fragment.RegisterFragment"
     android:background="#FFFFFF"
-    android:clickable="true">
+    android:clickable="true"
+    android:padding="15dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -17,35 +18,37 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="@color/commonTextColor"
-            android:hint="First Name"/>
+            android:hint="@string/first_name"
+            android:visibility="gone"/>
 
         <EditText
             android:id="@+id/f_register_et_last_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="@color/commonTextColor"
-            android:hint="Last Name"/>
+            android:hint="@string/last_name"
+            android:visibility="gone"/>
 
         <EditText
             android:id="@+id/f_register_et_email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="@color/commonTextColor"
-            android:hint="Email"/>
+            android:hint="@string/email"/>
 
         <EditText
             android:id="@+id/f_register_et_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="@color/commonTextColor"
-            android:hint="Password"/>
+            android:hint="@string/password"/>
 
         <Button
             android:id="@+id/f_register_b_register"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/commonTextColor"
-            android:text="Register"
+            android:text="@string/register"
             android:backgroundTint="@color/commonButtonColor"/>
 
     </LinearLayout>
