--- a/app/src/main/res/layout/fragment_travel_video.xml
+++ b/app/src/main/res/layout/fragment_travel_video.xml
@@ -20,7 +20,8 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintTop_toBottomOf="@id/f_travel_video_vv_video"
-        app:layout_constraintBottom_toBottomOf="parent">
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:padding="15dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -31,7 +32,7 @@
                 android:id="@+id/f_travel_video_b_delete"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Delete"
+                android:text="@string/delete"
                 android:backgroundTint="@color/deleteButtonColor"/>
 
             <TextView
@@ -39,7 +40,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Chicago"
-                android:textColor="@color/commonTextColor"/>
+                android:textColor="@color/commonTextColor"
+                android:textSize="20sp"
+                android:textStyle="bold"/>
 
             <ScrollView
                 android:layout_width="match_parent"
@@ -54,14 +57,14 @@
                         android:id="@+id/f_travel_video_t_description"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Description"
+                        android:hint="@string/description"
                         android:textColor="@color/commonTextColor"/>
 
                     <EditText
                         android:id="@+id/f_travel_video_et_description"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Description Edit Text"
+                        android:hint="@string/description"
                         android:imeOptions="actionDone"
                         android:textColor="@color/commonTextColor"/>
 
