--- a/app/src/main/res/layout/fragment_travel_videos.xml
+++ b/app/src/main/res/layout/fragment_travel_videos.xml
@@ -27,7 +27,7 @@
             android:id="@+id/f_travel_videos_b_add_video"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Add Video"
+            android:text="@string/add_video"
             app:layout_constraintTop_toBottomOf="@+id/f_travel_videos_r_videos"
             app:layout_constraintBottom_toBottomOf="parent"
             android:backgroundTint="@color/commonButtonColor"/>
