--- a/app/src/main/res/layout/activity_travels.xml
+++ b/app/src/main/res/layout/activity_travels.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activity.TravelsActivity"
-    android:id="@+id/a_travels_fl_root">
+    android:id="@+id/a_travels_fl_root"
+    android:padding="15dp">
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
