--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,58 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activity.LoginActivity"
-    android:id="@+id/a_login_c_root"
-    android:padding="20dp">
+    android:id="@+id/a_login_fl_root">
 
-    <LinearLayout
+    <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:padding="15dp">
 
-        <EditText
-            android:id="@+id/a_login_et_email"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textColor="@color/commonTextColor"
-            android:hint="@string/email"/>
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-        <EditText
-            android:id="@+id/a_login_et_password"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textColor="@color/commonTextColor"
-            android:hint="@string/password"/>
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <Button
-                android:id="@+id/a_login_btn_sign_in"
-                android:layout_width="wrap_content"
+            <EditText
+                android:id="@+id/a_login_et_email"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_marginStart="50dp"
-                android:text="@string/sign_in"
-                android:backgroundTint="@color/commonButtonColor"/>
+                android:textColor="@color/commonTextColor"
+                android:hint="@string/email"/>
 
-            <Button
-                android:id="@+id/a_login_btn_register"
-                android:layout_width="wrap_content"
+            <EditText
+                android:id="@+id/a_login_et_password"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_marginEnd="50dp"
-                android:text="@string/register"
-                android:backgroundTint="@color/commonButtonColor"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                android:textColor="@color/commonTextColor"
+                android:hint="@string/password"/>
 
-        </RelativeLayout>
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
-    </LinearLayout>
+                <Button
+                    android:id="@+id/a_login_btn_sign_in"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentStart="true"
+                    android:layout_marginStart="50dp"
+                    android:text="@string/sign_in"
+                    android:backgroundTint="@color/commonButtonColor"/>
 
-</android.support.constraint.ConstraintLayout>
+                <Button
+                    android:id="@+id/a_login_btn_register"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginEnd="50dp"
+                    android:text="@string/register"
+                    android:backgroundTint="@color/commonButtonColor"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+            </RelativeLayout>
+
+        </LinearLayout>
+
+    </android.support.constraint.ConstraintLayout>
+
+</FrameLayout>
