--- a/app/src/main/res/layout/fragment_travel_map_view.xml
+++ b/app/src/main/res/layout/fragment_travel_map_view.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".fragment.TravelMapViewFragment"
     android:clickable="true"
-    android:id="@+id/f_travel_map_view_c_root">
+    android:id="@+id/f_travel_map_view_fl_root">
 
     <FrameLayout
         android:layout_width="match_parent"
@@ -19,4 +19,4 @@
 
     </FrameLayout>
 
-</android.support.constraint.ConstraintLayout>
+</FrameLayout>
