--- a/app/src/main/res/layout/fragment_travel_video.xml
+++ b/app/src/main/res/layout/fragment_travel_video.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,72 +8,78 @@
     android:background="#FFFFFF"
     android:clickable="true">
 
-    <VideoView
-        android:id="@+id/f_travel_video_vv_video"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/f_travel_video_c_details"/>
-
     <android.support.constraint.ConstraintLayout
-        android:id="@+id/f_travel_video_c_details"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/f_travel_video_vv_video"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:padding="15dp">
+        android:layout_height="match_parent">
 
-        <LinearLayout
+        <VideoView
+            android:id="@+id/f_travel_video_vv_video"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_height="0dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/f_travel_video_c_details"/>
 
-            <Button
-                android:id="@+id/f_travel_video_b_delete"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/delete"
-                android:backgroundTint="@color/deleteButtonColor"/>
+        <android.support.constraint.ConstraintLayout
+            android:id="@+id/f_travel_video_c_details"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toBottomOf="@id/f_travel_video_vv_video"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:padding="15dp">
 
-            <TextView
-                android:id="@+id/f_travel_video_t_location"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Chicago"
-                android:textColor="@color/commonTextColor"
-                android:textSize="20sp"
-                android:textStyle="bold"/>
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
-            <ScrollView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                <Button
+                    android:id="@+id/f_travel_video_b_delete"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/delete"
+                    android:backgroundTint="@color/deleteButtonColor"/>
 
-                <ViewSwitcher
-                    android:id="@+id/f_travel_video_vs_description"
+                <TextView
+                    android:id="@+id/f_travel_video_t_location"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:text="Chicago"
+                    android:textColor="@color/commonTextColor"
+                    android:textSize="20sp"
+                    android:textStyle="bold"/>
 
-                    <TextView
-                        android:id="@+id/f_travel_video_t_description"
+                <ScrollView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <ViewSwitcher
+                        android:id="@+id/f_travel_video_vs_description"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:hint="@string/description"
-                        android:textColor="@color/commonTextColor"/>
+                        android:layout_height="wrap_content">
 
-                    <EditText
-                        android:id="@+id/f_travel_video_et_description"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:hint="@string/description"
-                        android:imeOptions="actionDone"
-                        android:textColor="@color/commonTextColor"/>
+                        <TextView
+                            android:id="@+id/f_travel_video_t_description"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:hint="@string/description"
+                            android:textColor="@color/commonTextColor"/>
 
-                </ViewSwitcher>
+                        <EditText
+                            android:id="@+id/f_travel_video_et_description"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:hint="@string/description"
+                            android:imeOptions="actionDone"
+                            android:textColor="@color/commonTextColor"/>
 
-            </ScrollView>
+                    </ViewSwitcher>
 
-        </LinearLayout>
+                </ScrollView>
+
+            </LinearLayout>
+
+        </android.support.constraint.ConstraintLayout>
 
     </android.support.constraint.ConstraintLayout>
 
-</android.support.constraint.ConstraintLayout>
+</FrameLayout>
