--- a/app/src/main/res/layout/fragment_travel_videos.xml
+++ b/app/src/main/res/layout/fragment_travel_videos.xml
@@ -11,7 +11,8 @@
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:padding="15dp">
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/f_travel_videos_r_videos"
