--- a/app/src/main/res/layout/fragment_travel_videos.xml
+++ b/app/src/main/res/layout/fragment_travel_videos.xml
@@ -31,7 +31,8 @@
             android:text="@string/add_video"
             app:layout_constraintTop_toBottomOf="@+id/f_travel_videos_r_videos"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:backgroundTint="@color/commonButtonColor"/>
+            android:backgroundTint="@color/commonButtonColor"
+            android:visibility="gone"/>
 
     </android.support.constraint.ConstraintLayout>
 
