--- a/app/src/main/res/layout/fragment_travel_video.xml
+++ b/app/src/main/res/layout/fragment_travel_video.xml
@@ -12,18 +12,56 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <VideoView
-            android:id="@+id/f_travel_video_vv_video"
+        <FrameLayout
+            android:id="@+id/f_travel_video_fl_0"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/f_travel_video_c_details"/>
+            app:layout_constraintBottom_toTopOf="@id/f_travel_video_c_details">
+
+            <VideoView
+                android:id="@+id/f_travel_video_vv_video"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+
+            <android.support.constraint.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <android.support.constraint.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent">
+
+                    <ImageView
+                        android:id="@+id/f_travel_video_i_play_pause"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/ic_play_arrow_50dp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"/>
+
+                    <SeekBar
+                        android:id="@+id/f_travel_video_sb_current_position"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toEndOf="@+id/f_travel_video_i_play_pause"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                </android.support.constraint.ConstraintLayout>
+
+            </android.support.constraint.ConstraintLayout>
+
+        </FrameLayout>
 
         <android.support.constraint.ConstraintLayout
             android:id="@+id/f_travel_video_c_details"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            app:layout_constraintTop_toBottomOf="@id/f_travel_video_vv_video"
+            app:layout_constraintTop_toBottomOf="@id/f_travel_video_fl_0"
             app:layout_constraintBottom_toBottomOf="parent"
             android:padding="15dp">
 
