added action bar to TravelsActivity

--- a/app/src/main/res/layout/activity_travels.xml
+++ b/app/src/main/res/layout/activity_travels.xml
@@ -9,27 +9,51 @@
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="15dp">
+        android:layout_height="match_parent">
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/a_travels_r_travels"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            tools:listitem="@layout/item_travel"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/a_travels_b_add_travel"/>
-
-        <!--TODO use floating button-->
-
-        <Button
-            android:id="@+id/a_travels_b_add_travel"
+        <android.support.design.widget.AppBarLayout
+            android:id="@+id/a_travels_abl_0"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Add Travel"
-            app:layout_constraintTop_toBottomOf="@id/a_travels_r_travels"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:backgroundTint="@color/commonButtonColor"/>
+            android:theme="@style/AppTheme.AppBarOverlay"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/a_travels_toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:background="?attr/colorPrimary"
+                app:popupTheme="@style/AppTheme.PopupOverlay" />
+
+        </android.support.design.widget.AppBarLayout>
+
+        <android.support.constraint.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:padding="15dp"
+            app:layout_constraintTop_toBottomOf="@id/a_travels_abl_0"
+            app:layout_constraintBottom_toBottomOf="parent">
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/a_travels_r_travels"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                tools:listitem="@layout/item_travel"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toTopOf="@id/a_travels_b_add_travel"/>
+
+            <!--TODO use floating button-->
+
+            <Button
+                android:id="@+id/a_travels_b_add_travel"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Add Travel"
+                app:layout_constraintTop_toBottomOf="@id/a_travels_r_travels"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:backgroundTint="@color/commonButtonColor"/>
+
+        </android.support.constraint.ConstraintLayout>
 
     </android.support.constraint.ConstraintLayout>
 
