--- a/app/src/main/res/layout/fragment_travel.xml
+++ b/app/src/main/res/layout/fragment_travel.xml
@@ -111,6 +111,12 @@
                 android:text="@string/videos"
                 android:backgroundTint="@color/commonButtonColor"/>
 
+            <Switch
+                android:id="@+id/f_travel_s_notify"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Notify "/>
+
             <TextView
                 android:id="@+id/f_travel_t_created_date"
                 android:layout_width="match_parent"
