--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,9 @@
     <color name="colorAccent">#fdcb6e</color>
 
     <color name="commonTextColor">#000000</color>
-    <color name="commonButtonColor">#fff3b1</color>
+    <color name="commonButtonColor">#7b88ff</color>
+    <color name="colorPrimaryComplement">#fff3b1</color>
     <color name="deleteButtonColor">#FF2222</color>
+    <color name="white">#FFFFFF</color>
+    <color name="commonButtonTextColor">#FFFFFF</color>
 </resources>
