--- a/app/src/main/res/layout/activity_travels.xml
+++ b/app/src/main/res/layout/activity_travels.xml
@@ -28,19 +28,17 @@
 
         </android.support.design.widget.AppBarLayout>
 
-        <android.support.constraint.ConstraintLayout
+        <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:padding="15dp"
             app:layout_constraintTop_toBottomOf="@id/a_travels_abl_0"
-            app:layout_constraintBottom_toBottomOf="parent">
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:padding="15dp">
 
             <android.support.v4.widget.SwipeRefreshLayout
                 android:id="@+id/a_travels_srl_travels"
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toTopOf="@id/a_travels_b_add_travel">
+                android:layout_height="match_parent">
 
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/a_travels_r_travels"
@@ -50,18 +48,16 @@
 
             </android.support.v4.widget.SwipeRefreshLayout>
 
-            <!--TODO use floating button-->
-
-            <Button
-                android:id="@+id/a_travels_b_add_travel"
-                android:layout_width="match_parent"
+            <android.support.design.widget.FloatingActionButton
+                android:id="@+id/a_travels_fab_add_travel"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Add Travel"
-                app:layout_constraintTop_toBottomOf="@id/a_travels_srl_travels"
-                app:layout_constraintBottom_toBottomOf="parent"
-                android:backgroundTint="@color/commonButtonColor"/>
+                android:backgroundTint="@color/commonButtonColor"
+                android:src="@drawable/ic_add_24dp"
+                android:layout_gravity="bottom|right"
+                android:layout_margin="10dp"/>
 
-        </android.support.constraint.ConstraintLayout>
+        </FrameLayout>
 
     </android.support.constraint.ConstraintLayout>
 
