--- a/app/src/main/res/layout/fragment_travel_video.xml
+++ b/app/src/main/res/layout/fragment_travel_video.xml
@@ -70,20 +70,31 @@
                 android:layout_height="match_parent"
                 android:orientation="vertical">
 
-                <Button
-                    android:id="@+id/f_travel_video_b_delete"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/delete"
-                    android:backgroundTint="@color/deleteButtonColor"/>
-
-                <TextView
-                    android:id="@+id/f_travel_video_t_location_name"
+                <android.support.constraint.ConstraintLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Chicago"
-                    android:textColor="@color/commonTextColor"
-                    android:textSize="20sp"/>
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:id="@+id/f_travel_video_t_location_name"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:text="Chicago"
+                        android:textColor="@color/commonTextColor"
+                        android:textSize="20sp"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintEnd_toStartOf="@id/f_travel_video_ib_more_options"/>
+
+                    <ImageButton
+                        android:id="@+id/f_travel_video_ib_more_options"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/ic_more_vert_white_32dp"
+                        android:backgroundTint="#55000000"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"/>
+
+                </android.support.constraint.ConstraintLayout>
 
                 <TextView
                     android:id="@+id/f_travel_video_t_location_lat"
