some ui polishing

--- a/app/src/main/res/layout/fragment_travel.xml
+++ b/app/src/main/res/layout/fragment_travel.xml
@@ -197,7 +197,8 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                android:backgroundTint="@color/deleteButtonColor"/>
+                android:backgroundTint="@color/deleteButtonColor"
+                android:textColor="@color/commonButtonTextColor"/>
 
             <Button
                 android:id="@+id/f_travel_b_creating_save"
